--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,7 +62,7 @@
         <service android:name="com.idata.bluetoothime.PinyinDecoderService" />
         <service android:name="com.idata.bluetoothime.BluetoothService" />
 
-        <receiver android:name=".MyReceiver" >
+        <receiver android:name="com.idata.bluetoothime.MyReceiver" >
             <intent-filter>
                 <action android:name="android.intent.idatachina.RFID.BARCODE.SCANINFO" />
             </intent-filter>
