--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:screenOrientation="portrait"
-            android:label="@string/app_name"
+            android:label="@string/ime_connect_activity_test"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
         
         <service
