--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,12 @@
         </activity>
         
         <activity
+            android:name=".FunctionActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Dialog" />
+        
+        <activity
             android:name=".DeviceListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/select_device"
