--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,10 +38,14 @@
         </activity>
         
         <activity
-            android:name=".FunctionActivity"
+            android:name=".ConfigActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:label="@string/select_device"
-            android:theme="@android:style/Theme.Dialog" />
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
+        
+        <activity
+            android:name=".ImageActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@android:style/Theme.Black.NoTitleBar" />
         
         <activity
             android:name=".DeviceListActivity"
